--- a/styles/style.css
+++ b/styles/style.css
@@ -90,7 +90,7 @@ body {
     justify-content: center;
     gap: 16px;
     border: 2px solid var(--cor-terciaria);
-    width: 60%;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
     font-size: 1.5rem;
@@ -135,4 +135,8 @@ body {
     .apresentacao__conteudo{
         width: auto;
     }    
+    .apresentacao__conteudo__links_navegacao
+    {
+        width: 60%;
+    }
 }
